--- a/style.css
+++ b/style.css
@@ -45,3 +45,31 @@ a span {
   position: absolute;
   display: block;
 }
+
+input[type="checkbox"] {
+  transform: scale(1.6);
+  margin-right: 20px;
+}
+label {
+  padding-right: 60px;
+}
+.tags {
+  display: table;
+  font-size: 20px;
+  margin: auto;
+}
+
+.col {
+  width: 800px;
+  display: table-row;
+  text-align: left;
+  /* set to whatever width works for you */
+  /*float: left; */
+  /* put the columns next to each other */
+  margin-right: 10px;
+  /* add some space between columns */
+}
+
+.col label {
+  display: table-cell;
+}
