--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import "compass/css3";
 body {
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
@@ -33,17 +34,32 @@ body {
   text-decoration: none;
   font-size: 36px;
 }
-a:hover {
+
+.b a:hover {
   color: white;
   background: #2196f3;
   transition-duration: 1s;
 }
 
 /*up*/
+i {
+  text-decoration: none;
+}
+.but a {
+  color: white;
+}
 
 a span {
   position: absolute;
   display: block;
+}
+
+.but {
+  position: absolute;
+  top: 50px;
+  right: 80px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 input[type="checkbox"] {
@@ -54,7 +70,6 @@ label {
   padding-right: 60px;
 }
 .tags {
-  display: table;
   font-size: 20px;
   margin: auto;
 }
