--- a/style.css
+++ b/style.css
@@ -11,17 +11,20 @@ body {
   align-content: center;
   min-height: 100vh;
   background: black;
-  font-family: consolas;
+  font-family: "Architects Daughter", cursive;
   color: white;
   text-align: center;
 }
 
 .text {
-  font-size: 48px;
+  font-size: 52px;
+  letter-spacing: 2px;
   padding-top: 200px;
+  font-family: "Righteous", cursive;
+  font-weight: 400;
 }
 .b {
-  padding: 80px;
+  padding: 60px;
 }
 .button {
   border-radius: 50px;
@@ -32,7 +35,8 @@ body {
   letter-spacing: 4px;
   overflow: hidden;
   text-decoration: none;
-  font-size: 36px;
+  font-size: 44px;
+  font-family: "Shadows Into Light", cursive;
 }
 
 .b a:hover {
@@ -70,8 +74,9 @@ label {
   padding-right: 60px;
 }
 .tags {
-  font-size: 20px;
+  font-size: 28px;
   margin: auto;
+  font-family: "Rokkitt", serif;
 }
 
 .col {
